# layout

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  Gemfile  Guardfile  Makefile  README.md  build.sh  debug.sh  hello-cpp-world.cc  meson.build  package.sh  release.sh  source_file_for_tests  test.cpp  tidy.sh  watch
exe/: main.cpp
include/: clang_string.hpp  code_writer.hpp  driver.hpp  faking.hpp  field_info.hpp  libclang.hpp  load_file.hpp  output_markdown.hpp  output_string.hpp  platform.hpp  translation_unit.hpp  type_info.hpp  type_inspector.hpp
src/: CMakeLists.txt  clang_string.cpp  code_writer.cpp  driver.cpp  libclang.cpp  load_file.cpp  output_markdown.cpp  output_string.cpp  translation_unit.cpp  type_inspector.cpp
support/: libclang.cpp  main.cpp
test/: libclang_test_double.cpp  libclang_test_double.hpp  temp_source_file.hpp  test_code_writer.cpp  test_driver.cpp  test_load_file.cpp  test_output_markdown.cpp  test_output_string.cpp  test_translation_unit.cpp  test_type_inspector.cpp
test/end-to-end/: empty_type.hpp  empty_type_expected.txt  one_field.hpp  one_field_expected.txt
